--- a/templates/Quiz_2/Addiction.html
+++ b/templates/Quiz_2/Addiction.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-<font color="burlywood"><h4 align="right">Tu ID: {{ participant_id }}</h4></font>
+<font color="burlywood"><h4 align="right">Tu Etiqueta: {{ participant_id }}</h4></font>
 Primer cuestionario adicional {% endblock %}
 {% block content %}
 
