--- a/templates/Quiz_2/General_fum.html
+++ b/templates/Quiz_2/General_fum.html
@@ -2,7 +2,7 @@
 {% load otree %}
 
 {% block title %}
-<font color="burlywood"><h4 align="right">Tu ID: {{ participant_id }}</h4></font>
+<font color="burlywood"><h4 align="right">Tu Etiqueta: {{ participant_id }}</h4></font>
 Segundo cuestionario adicional {% endblock %}
 
 {% block content %}
