--- a/templates/Quiz_2/Introduction_Part3.html
+++ b/templates/Quiz_2/Introduction_Part3.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 {% block title %}
-<font color="burlywood"><h4 align="right">Tu ID: {{ participant_id }}</h4></font>
+<font color="burlywood"><h4 align="right">Tu Etiqueta: {{ participant_id }}</h4></font>
 PARTE III
 {% endblock %}
 {% block content %}
